--- a/src/index.html
+++ b/src/index.html
@@ -148,7 +148,7 @@
         <div class="warning__text">
             <p>Ой :( Что-то пошло не так!</p>
             <p>Вы просматриваете этот сайт с устройства, ширины которого недостаточно для корректного отображения страницы.</p>
-            <p>Пожалуйста, используйте другое устройство, чтобы просмотреть содержимое сайта!</p>
+            <p>Пожалуйста, используйте другое устройство, чтобы просмотреть содержимое этого сайта!</p>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
