--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,14 @@
     <meta name="msapplication-TileImage" content="icons/favicon/mstile-144x144.png" />
     <meta name="msapplication-config" content="icons/favicon/browserconfig.xml" />
     <meta name="theme-color" content="#bad8ff" />
-    <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
-    <link rel="stylesheet" href="css/slick.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
 
@@ -208,10 +214,10 @@
         <p>Пожалуйста, используйте другое устройство, чтобы просмотреть содержимое этого сайта!</p>
       </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://code.jquery.com/jquery-migrate-3.3.2.min.js"></script>
-    <script src="js/jquery.fancybox.min.js"></script>
-    <script src="js/slick.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-3.4.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script src="js/script.min.js"></script>
   </body>
 </html>
